--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="login-background">
 
 <head>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="flex-container">
+    <div class="flex-container login-screen">
         <div>
             <div class="login-form">
                 <h1>Login</h1>
