finished doc view

--- a/doctor.html
+++ b/doctor.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="doc-items">
                     <img class="doc-icons" src="./images/stethoscope-svgrepo-com.svg">
-                    <h3>Today's Schedule</h3>
+                    <h3>Today's Procedures</h3>
                 </div>
                 <div class="doc-items">
                     <img class="doc-icons" src="./images/receipt-search-svgrepo-com.svg">
@@ -44,9 +44,33 @@
         </section>
 
         <section>
-            <h2>Today's Schedule</h2>
-            <div>
+            <h2 id="doc-headline">Today's Schedule</h2>
+
+            <div class="patient-container">
                 <div class="patient-box">
+                    <div class="patient-items ava-box">
+                        <img class="patient-box-ava" src="./images/student-management-avatar-people-svgrepo-com.svg">
+                    </div>
+                    <div class="patient-items">
+                        <h2>Name: Patient A</h2>
+                        <h2>Age: 24</h2>
+                        <h2>Gender: Female</h2>
+                        <h2>Appointment time: 9:30 P.M</h2>
+                        <h2>Procedure: Dental checkup</h2>
+                    </div>
+                </div>
+
+                <div class="patient-box">
+                    <div class="patient-items ava-box">
+                        <img class="patient-box-ava" src="./images/student-management-avatar-people-svgrepo-com.svg">
+                    </div>
+                    <div class="patient-items">
+                        <h2>Name: Patient B</h2>
+                        <h2>Age: 24</h2>
+                        <h2>Gender: Male</h2>
+                        <h2>Appointment time: 9:30 P.M</h2>
+                        <h2>Procedure: Dental checkup</h2>
+                    </div>
                 </div>
             </div>
         </section>
