change file name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>
             <div class="login-form">
                 <h1>Login</h1>
-                <form id="loginForm" action="./connectDB">
+                <form id="loginForm" action="connectDB.php" method="POST">
                     <div class="input-icons">
                         <label for="username">Username</label><br>
                         <!-- <i class="material-symbols-outlined icon">account_circle</i> -->
