Login functionality for dentist + css effects

--- a/doctor.html
+++ b/doctor.html
@@ -28,15 +28,15 @@
 
         <section>
             <div class="flex-docItems">
-                <div class="doc-items">
+                <div class="doc-items hvr-grow">
                     <img class="doc-icons" src="./images/calendar-alt-svgrepo-com.svg">
                     <h3>Schedule</h3>
                 </div>
-                <div class="doc-items">
+                <div class="doc-items hvr-grow">
                     <img class="doc-icons" src="./images/stethoscope-svgrepo-com.svg">
                     <h3>Today's Procedures</h3>
                 </div>
-                <div class="doc-items">
+                <div class="doc-items hvr-grow">
                     <img class="doc-icons" src="./images/receipt-search-svgrepo-com.svg">
                     <h3>Account Statements</h3>
                 </div>
