--- a/doctor.html
+++ b/doctor.html
@@ -18,7 +18,7 @@
         <section>
             <div class="flex-container-doctor">
                 <div class="flex-container-doctor-child">
-                    <img id="doc-ava" src="./images/student-management-avatar-people-svgrepo-com.svg">
+                    <img id="doc-ava" src="/images/student-management-avatar-people-svgrepo-com.svg">
                 </div>
                 <div class="flex-container-doctor-child">
                     <h1> Good day, Doctor!</h1>
@@ -29,16 +29,22 @@
         <section>
             <div class="flex-docItems">
                 <div class="doc-items hvr-grow">
-                    <img class="doc-icons" src="./images/calendar-alt-svgrepo-com.svg">
-                    <h3>Schedule</h3>
+                    <button>
+                        <img class="doc-icons" src="/images/calendar-alt-svgrepo-com.svg">
+                        <h3>Schedule</h3>
+                    </button>
                 </div>
                 <div class="doc-items hvr-grow">
-                    <img class="doc-icons" src="./images/stethoscope-svgrepo-com.svg">
-                    <h3>Today's Procedures</h3>
+                    <button>
+                        <img class="doc-icons" src="/images/stethoscope-svgrepo-com.svg">
+                        <h3>Today's Procedures</h3>
+                    </button>
                 </div>
                 <div class="doc-items hvr-grow">
-                    <img class="doc-icons" src="./images/receipt-search-svgrepo-com.svg">
-                    <h3>Account Statements</h3>
+                    <button>
+                        <img class="doc-icons" src="/images/receipt-search-svgrepo-com.svg">
+                        <h3>Account Statements</h3>
+                    </button>
                 </div>
             </div>
         </section>
@@ -49,7 +55,7 @@
             <div class="patient-container">
                 <div class="patient-box">
                     <div class="patient-items ava-box">
-                        <img class="patient-box-ava" src="./images/student-management-avatar-people-svgrepo-com.svg">
+                        <img class="patient-box-ava" src="/images/student-management-avatar-people-svgrepo-com.svg">
                     </div>
                     <div class="patient-items">
                         <h2>Name: Patient A</h2>
@@ -62,7 +68,7 @@
 
                 <div class="patient-box">
                     <div class="patient-items ava-box">
-                        <img class="patient-box-ava" src="./images/student-management-avatar-people-svgrepo-com.svg">
+                        <img class="patient-box-ava" src="/images/student-management-avatar-people-svgrepo-com.svg">
                     </div>
                     <div class="patient-items">
                         <h2>Name: Patient B</h2>
@@ -74,6 +80,8 @@
                 </div>
             </div>
         </section>
+
+        <div id="demo-desktop-month-view"></div>
     </body>
 </section>
 
