calender image test

--- a/doctor.html
+++ b/doctor.html
@@ -30,7 +30,7 @@
             <div class="flex-docItems">
                 <div class="doc-items hvr-grow">
                     <button>
-                        <img class="doc-icons" src="images/calendar-alt-svgrepo-com.svg">
+                        <img class="doc-icons" src="http://student.fsb.miamioh.edu/dental/images/calendar-alt-svgrepo-com">
                         <h3>Schedule</h3>
                     </button>
                 </div>
