added schedule.html + scroll to procedure

--- a/doctor.html
+++ b/doctor.html
@@ -30,14 +30,18 @@
             <div class="flex-docItems">
                 <div class="doc-items hvr-grow">
                     <button>
-                        <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/calendar-alt-svgrepo-com.svg">
-                        <h3>Schedule</h3>
+                        <a href="schedule.html" target="_blank">
+                            <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/calendar-alt-svgrepo-com.svg">
+                            <h3>Schedule</h3>
+                        </a>
                     </button>
                 </div>
                 <div class="doc-items hvr-grow">
                     <button>
-                        <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/stethoscope-svgrepo-com.svg">
-                        <h3>Today's Procedures</h3>
+                        <a href="#doc-headline">
+                            <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/stethoscope-svgrepo-com.svg">
+                            <h3>Today's Procedures</h3>
+                        </a>
                     </button>
                 </div>
                 <div class="doc-items hvr-grow">
