change accc statement to paystub, add patient page

--- a/patient.html
+++ b/patient.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
         <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-        <title>Doctor's View</title>
+        <title>Patient's View</title>
     </head>
 
     <body>
@@ -21,7 +21,7 @@
                     <img id="doc-ava" src="https://moonbui.github.io/Protoype/images/student-management-avatar-people-svgrepo-com.svg">
                 </div>
                 <div class="flex-container-doctor-child">
-                    <h1> Good day, Doctor!</h1>
+                    <h1> Good day, A!</h1>
                 </div>
             </div>
         </section>
@@ -32,7 +32,7 @@
                     <button>
                         <a href="schedule.html" target="_blank">
                             <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/calendar-alt-svgrepo-com.svg">
-                            <h3>Schedule</h3>
+                            <h3>Schedule Appointment</h3>
                         </a>
                     </button>
                 </div>
@@ -47,45 +47,12 @@
                 <div class="doc-items hvr-grow">
                     <button>
                         <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/receipt-search-svgrepo-com.svg">
-                        <h3>Payroll</h3>
+                        <h3>Account Statements</h3>
                     </button>
                 </div>
             </div>
         </section>
 
-        <section>
-            <h2 id="doc-headline">Today's Schedule</h2>
-
-            <div class="patient-container">
-                <div class="patient-box">
-                    <div class="patient-items ava-box">
-                        <img class="patient-box-ava" src="https://moonbui.github.io/Protoype/images/student-management-avatar-people-svgrepo-com.svg">
-                    </div>
-                    <div class="patient-items">
-                        <h2>Name: Patient A</h2>
-                        <h2>Age: 24</h2>
-                        <h2>Gender: Female</h2>
-                        <h2>Appointment time: 9:30 P.M</h2>
-                        <h2>Procedure: Dental checkup</h2>
-                    </div>
-                </div>
-
-                <div class="patient-box">
-                    <div class="patient-items ava-box">
-                        <img class="patient-box-ava" src="https://moonbui.github.io/Protoype/images/student-management-avatar-people-svgrepo-com.svg">
-                    </div>
-                    <div class="patient-items">
-                        <h2>Name: Patient B</h2>
-                        <h2>Age: 24</h2>
-                        <h2>Gender: Male</h2>
-                        <h2>Appointment time: 9:30 P.M</h2>
-                        <h2>Procedure: Dental checkup</h2>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <div id="demo-desktop-month-view"></div>
     </body>
 </section>
 
