--- a/schedule.html
+++ b/schedule.html
@@ -7,10 +7,14 @@
                 background: linear-gradient(to bottom, #44BBFF, #CDEBFB);
             }
         </style>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     </head> 
 <body>     
     <h1 style="font-family: Sulphur Point; font-size: 40px;">Dentist A Schedule</h1>
-    <p style="background-color:blue;color:white;"><b>Schedule for the week</b></p>
     <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23ffffff&ctz=America%2FNew_York&showTitle=1&showPrint=0&showCalendars=1&showTabs=0&mode=WEEK&title=Dentist%20Appointment%20Schedule&src=Y19hNTZjN2IzYTNkMGQzYjk3ODU4Y2M0MGEwMDFlOGJkNDNlMjFiM2NhN2MxZjJhNTc5YjU3MjQ5YWU2YWNkM2Q3QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23009688" 
     style="border-width:0" width="800" height="600" frameborder="0" scrolling="no" margin-left="300"></iframe>
 </body>
