link doc's page to payroll

--- a/doctor.html
+++ b/doctor.html
@@ -46,8 +46,10 @@
                 </div>
                 <div class="doc-items hvr-grow">
                     <button>
-                        <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/receipt-search-svgrepo-com.svg">
-                        <h3>Payroll</h3>
+                        <a href="payroll.php" target="_blank">
+                            <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/receipt-search-svgrepo-com.svg">
+                            <h3>Payroll</h3>
+                        </a>
                     </button>
                 </div>
             </div>
