updated patient page

--- a/patient.html
+++ b/patient.html
@@ -30,24 +30,34 @@
             <div class="flex-docItems">
                 <div class="doc-items hvr-grow">
                     <button>
-                        <a href="schedule.html" target="_blank">
+                        <a href="patientNotes.html" target="_blank">
                             <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/calendar-alt-svgrepo-com.svg">
-                            <h3>Schedule Appointment</h3>
+                            <h3>Upcoming Appointment</h3>
                         </a>
                     </button>
                 </div>
                 <div class="doc-items hvr-grow">
                     <button>
-                        <a href="#doc-headline">
-                            <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/stethoscope-svgrepo-com.svg">
-                            <h3>Today's Procedures</h3>
-                        </a>
+                            <img class="doc-icons" src="./images/heart-attack.png">
+                            <h3>Personal Health Information</h3>
                     </button>
                 </div>
                 <div class="doc-items hvr-grow">
                     <button>
                         <img class="doc-icons" src="https://moonbui.github.io/Protoype/images/receipt-search-svgrepo-com.svg">
                         <h3>Account Statements</h3>
+                    </button>
+                </div>
+                <div class="doc-items hvr-grow second-row">
+                    <button>
+                            <img class="doc-icons" src="./images/meds.png">
+                            <h3>Request Refill</h3>
+                    </button>
+                </div>
+                <div class="doc-items hvr-grow second-row">
+                    <button>
+                            <img class="doc-icons" src="./images/envelope.png">
+                            <h3>Request Help</h3>
                     </button>
                 </div>
             </div>
