--- a/patientNotes.html
+++ b/patientNotes.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>  
+
+<section style="position: absolute;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* Background color */
+    background: linear-gradient(#3AB1F4, white);
+    /* border-radius: 0 0 150% 10%; */
+    /* Size */
+    background-repeat: no-repeat;"></section>
+
+<head>
     <title>Patients's Appointment</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-</head> 
-<body>     
+</head>
+
+<body>
     <div style="position: absolute;
             width: 1496px;
-            height: 800px;
-            background: linear-gradient(180deg, #44BBFF 0%, rgba(205, 235, 251, 0) 100%);">
+            height: 800px;">
         <p style="font-family: 'Sulphur Point';
               font-weight: 800;
               font-size: 40px;">
@@ -53,7 +67,7 @@
             font-size: 45px;
             line-height: 45px;
             text-align: center;">
-                8:30 AM
+            8:30 AM
         </p>
     </div>
     <div style="position: absolute;
@@ -81,8 +95,9 @@
               font-size: 45px;
               line-height: 45px;
               text-align: center;">
-        Notes:
+            Notes:
         </p>
     </div>
 </body>
+
 </html>
